refactor(api): convert FlagContainer to record with immutable lists
Record syntax forces final fields; the three removeXFlag mutators cannot
stay. Drop them from the API and remove their three callers in
DatabaseLandFlagService — they mutated the in-memory FlagContainer after
the DB delete, but callers do not observe the mutated instance (the
service chain re-fetches state as needed).

The compact constructor defensively copies the three flag lists with
List.copyOf so callers cannot mutate the record's internal state.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>